--- a/src/app/login/components/phone/phone.component.html
+++ b/src/app/login/components/phone/phone.component.html
@@ -3,8 +3,8 @@
     <input matInput placeholder="Email" [formControl]="emailFormControl"
            [errorStateMatcher]="matcher">
     <mat-hint>Errors appear instantly!</mat-hint>
-    <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-      Please enter a valid email address
+    <mat-error *ngIf="emailFormControl.hasError('validCountryPhone') && !emailFormControl.hasError('required')">
+      Please enter a valid phone
     </mat-error>
     <mat-error *ngIf="emailFormControl.hasError('required')">
       Email is <strong>required</strong>
