Make login functional

--- a/src/app/login/pages/confirm/confirm.component.html
+++ b/src/app/login/pages/confirm/confirm.component.html
@@ -12,6 +12,8 @@
     </mat-form-field>
   </form>
 
+  <button (click)="confirm()"> confirm </button>
+
 
 <button [routerLink]="['/login']">Back</button>
 <button [routerLink]="['']">Next</button>
